--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">Sandwich Club</string>
 
     <!-- Detail Activity-->
-    <string name="detail_also_known_as_label">Also known as:</string>
-    <string name="detail_place_of_origin_label">Place of origin:</string>
-    <string name="detail_description_label">Description:</string>
-    <string name="detail_ingredients_label">Ingredients:</string>
+    <string name="detail_also_known_as_label">Also Known As</string>
+    <string name="detail_place_of_origin_label">Place of Origin</string>
+    <string name="detail_description_label">Description</string>
+    <string name="detail_ingredients_label">Ingredients</string>
+    <string name="detail_bullet"> • </string>
 
     <!-- Content descriptions-->
     <string name="sandwich_picture_content_description">Sandwich picture</string>
